# exon

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  exon.toml  install.sh  mise.toml
.github/cmake/: CMakeLists.txt
.github/workflows/: bump-cppx.yml  ci.yml  pages.yml  release.yml
docs/: book.toml  docs.wasm  exon.toml  index.html  workspace.md
docs/src/: SUMMARY.md  about.md  introduction.md  main.cpp
docs/src/guide/: commands.md  getting-started.md
examples/workspace/: CMakeLists.txt  README.md  exon.toml
examples/workspace/apps/hello/: CMakeLists.txt  exon.toml
examples/workspace/apps/hello/src/: main.cpp
examples/workspace/apps/inspect/: CMakeLists.txt  exon.toml
examples/workspace/apps/inspect/src/: main.cpp
examples/workspace/apps/report/: CMakeLists.txt  exon.toml
examples/workspace/apps/report/src/: main.cpp
examples/workspace/libs/foundation/: CMakeLists.txt  exon.toml
examples/workspace/libs/foundation/src/: foundation.cppm
examples/workspace/libs/greeting/: CMakeLists.txt  exon.toml
examples/workspace/libs/greeting/src/: greeting.cppm
scripts/: bootstrap.sh
src/: build.cppm  build.system.cppm  cli.cppm  commands.cppm  core.cppm  debug.cppm  debug.system.cppm  fetch.cppm  fetch.system.cppm  lock.cppm  lock.system.cppm  main.cpp  manifest.cppm  manifest.system.cppm  reporting.cppm  reporting.system.cppm  semver.cppm  templates.cppm  terminal.cppm  terminal.system.cppm  toolchain.cppm  toolchain.system.cppm  vcpkg.cppm  vcpkg.system.cppm
tests/: regressions.cpp  test_build.cpp  test_cli.cpp  test_commands.cpp  test_debug.cpp  test_fetch.cpp  test_lock.cpp  test_manifest.cpp  test_reporting.cpp  test_semver.cpp  test_terminal.cpp  test_toml.cpp  test_vcpkg.cpp
tomlcpp/: toml.cppm
